@@ -11,6 +11,7 @@ public:
   virtual void faacDecClose(faacDecHandle hDecoder)=0;
   virtual void* faacDecDecode(faacDecHandle hDecoder, faacDecFrameInfo *hInfo, unsigned char *buffer, unsigned long buffer_size)=0;
   virtual long faacDecInit(faacDecHandle hDecoder, unsigned char *buffer, unsigned long buffer_size, unsigned long *samplerate, unsigned char *channels)=0;
+  virtual char faacDecInit2(faacDecHandle hDecoder, unsigned char *pBuffer, unsigned long SizeOfDecoderSpecificInfo, unsigned long *samplerate, unsigned char *channels)=0;
   virtual char* faacDecGetErrorMessage(unsigned char errcode)=0;
 };
 
@@ -23,6 +24,7 @@ class DllLibFaad : public DllDynamic, DllLibFaadInterface
   DEFINE_METHOD1(void, faacDecClose, (faacDecHandle p1))
   DEFINE_METHOD4(void*, faacDecDecode, (faacDecHandle p1, faacDecFrameInfo *p2, unsigned char *p3, unsigned long p4))
   DEFINE_METHOD5(long, faacDecInit, (faacDecHandle p1, unsigned char *p2, unsigned long p3, unsigned long *p4, unsigned char *p5))
+  DEFINE_METHOD5(char, faacDecInit2, (faacDecHandle p1, unsigned char *p2, unsigned long p3, unsigned long *p4, unsigned char *p5))
   DEFINE_METHOD1(char*, faacDecGetErrorMessage, (unsigned char p1))
   BEGIN_METHOD_RESOLVE()
     RESOLVE_METHOD(faacDecOpen)
@@ -31,6 +33,7 @@ class DllLibFaad : public DllDynamic, DllLibFaadInterface
     RESOLVE_METHOD(faacDecClose)
     RESOLVE_METHOD(faacDecDecode)
     RESOLVE_METHOD(faacDecInit)
+    RESOLVE_METHOD(faacDecInit2)
     RESOLVE_METHOD(faacDecGetErrorMessage)
   END_METHOD_RESOLVE()
 };
